--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-parallax-tilt": "^1.7.72",
     "wagmi": "^0.8.10",
     "web3": "^1.8.1"
   },
