--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-parallax-tilt": "^1.7.72",
+    "revise-sdk": "^0.2.0",
     "wagmi": "^0.8.10",
     "web3": "^1.8.1"
   },
